// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for aspectRatio: "1:1", size: "inherit", weight: "regular", background: light, align: bottom, isCompact: false and hasGradient: true 1`] = `
":host {
  display: block;
  hyphens: auto;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot {
  display: block;
}
slot:not([name]) {
  width: 100%;
  height: 100%;
  transition: transform var(--p-transition-duration, 0.4s) cubic-bezier(0.25,0.1,0.25,1);
}
slot[name="header"] {
  grid-area: 2/2;
  z-index: 3;
}
::slotted(:is(img,picture,video)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
}
::slotted(:is(img,video)) {
  object-fit: cover !important;
}
a {
  grid-area: 1/1/-1 /-1;
  z-index: 4;
  outline: 0;
}
p {
  font: normal normal 400 clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: inherit;
  z-index: 3;
  margin: 0;
  max-width: 34.375rem;
  font-size: inherit;
  font-weight: 400;
  color: #010205;
}
.root {
  aspect-ratio: 1/1;
  width: 100%;
  height: 100%;
  display: grid;
  grid-template: clamp(16px, 1.25vw + 12px, 36px) auto minmax(0px, 1fr) auto clamp(16px, 1.25vw + 12px, 36px)/clamp(16px, 1.25vw + 12px, 36px) minmax(0px, 1fr) clamp(16px, 1.25vw + 12px, 36px);
}
.media {
  position: relative;
  grid-area: 1/1/-1 /-1;
  z-index: 1;
  overflow: hidden;
  border-radius: 12px;
}
.footer {
  grid-area: 4/2;
  display: flex;
  gap: 16px;
  justify-content: space-between;
  align-items: flex-start;
  flex-direction: column;
}
.link-or-button-pure {
  z-index: 5;
  display: none;
}
.link-or-button {
  min-height: 54px;
  z-index: 5;
  display: inline-block;
}
@media(hover:hover) {
  .root:hover slot:not([name]) {
    transform: scale3d(1.05,1.05,1.05);
  }
}
"
`;

exports[`getComponentCss() should return correct css for aspectRatio: "3:4", size: "default", weight: "semi-bold", background: dark, align: top, isCompact: false and hasGradient: true 1`] = `
":host {
  display: block;
  hyphens: auto;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot {
  display: block;
}
slot:not([name]) {
  width: 100%;
  height: 100%;
  transition: transform var(--p-transition-duration, 0.4s) cubic-bezier(0.25,0.1,0.25,1);
}
slot[name="header"] {
  grid-area: 4/2;
  z-index: 3;
}
::slotted(:is(img,picture,video)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
}
::slotted(:is(img,video)) {
  object-fit: cover !important;
}
a {
  grid-area: 1/1/-1 /-1;
  z-index: 4;
  outline: 0;
}
p {
  font: normal normal 400 clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: inherit;
  z-index: 3;
  margin: 0;
  max-width: 34.375rem;
  font-size: clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem);
  font-weight: 600;
  color: #FBFCFF;
}
.root {
  aspect-ratio: 3/4;
  width: 100%;
  height: 100%;
  display: grid;
  grid-template: clamp(16px, 1.25vw + 12px, 36px) auto minmax(0px, 1fr) auto clamp(16px, 1.25vw + 12px, 36px)/clamp(16px, 1.25vw + 12px, 36px) minmax(0px, 1fr) clamp(16px, 1.25vw + 12px, 36px);
}
.root::after {
  content: "";
  z-index: 2;
  grid-area: 1/1/3/-1;
  background: linear-gradient(to bottom, hsla(0, 0%, 0%, 0.80) 0%,hsla(0, 0%, 0%, 0.80) 8.1%,hsla(0, 0%, 0%, 0.80) 15.5%,hsla(0, 0%, 0%, 0.80) 22.5%,hsla(0, 0%, 0%, 0.78) 29%,hsla(0, 0%, 0%, 0.73) 35.3%,hsla(0, 0%, 0%, 0.67) 41.2%,hsla(0, 0%, 0%, 0.60) 47.1%,hsla(0, 0%, 0%, 0.52) 52.9%,hsla(0, 0%, 0%, 0.44) 58.8%,hsla(0, 0%, 0%, 0.33) 64.7%,hsla(0, 0%, 0%, 0.22) 71%,hsla(0, 0%, 0%, 0.12) 77.5%,hsla(0, 0%, 0%, 0.05) 84.5%,hsla(0, 0%, 0%, 0.011) 91.9%,hsla(0, 0%, 0%, 0) 100%);;
  margin-bottom: calc(clamp(32px, 2.75vw + 23px, 76px) * -1);
  border-start-start-radius: 12px;
  border-start-end-radius: 12px;
}
.media {
  position: relative;
  grid-area: 1/1/-1 /-1;
  z-index: 1;
  overflow: hidden;
  border-radius: 12px;
}
.footer {
  grid-area: 2/2;
  display: flex;
  gap: 16px;
  justify-content: space-between;
  align-items: flex-start;
  flex-direction: column;
}
.link-or-button-pure {
  z-index: 5;
  display: none;
}
.link-or-button {
  min-height: 54px;
  z-index: 5;
  display: inline-block;
}
@media (forced-colors: active) {
  .root::after {
    background: rgba(0,0,0,0.7);
  }
}

@media(hover:hover) {
  .root:hover slot:not([name]) {
    transform: scale3d(1.05,1.05,1.05);
  }
}
"
`;

exports[`getComponentCss() should return correct css for aspectRatio: "4:3", size: "default", weight: "semi-bold", background: dark, align: bottom, isCompact: false and hasGradient: true 1`] = `
":host {
  display: block;
  hyphens: auto;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot {
  display: block;
}
slot:not([name]) {
  width: 100%;
  height: 100%;
  transition: transform var(--p-transition-duration, 0.4s) cubic-bezier(0.25,0.1,0.25,1);
}
slot[name="header"] {
  grid-area: 2/2;
  z-index: 3;
}
::slotted(:is(img,picture,video)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
}
::slotted(:is(img,video)) {
  object-fit: cover !important;
}
a {
  grid-area: 1/1/-1 /-1;
  z-index: 4;
  outline: 0;
}
p {
  font: normal normal 400 clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: inherit;
  z-index: 3;
  margin: 0;
  max-width: 34.375rem;
  font-size: clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem);
  font-weight: 600;
  color: #FBFCFF;
}
.root {
  aspect-ratio: 4/3;
  width: 100%;
  height: 100%;
  display: grid;
  grid-template: clamp(16px, 1.25vw + 12px, 36px) auto minmax(0px, 1fr) auto clamp(16px, 1.25vw + 12px, 36px)/clamp(16px, 1.25vw + 12px, 36px) minmax(0px, 1fr) clamp(16px, 1.25vw + 12px, 36px);
}
.root::after {
  content: "";
  z-index: 2;
  grid-area: 4/1/6/-1;
  background: linear-gradient(to top, hsla(0, 0%, 0%, 0.80) 0%,hsla(0, 0%, 0%, 0.80) 8.1%,hsla(0, 0%, 0%, 0.80) 15.5%,hsla(0, 0%, 0%, 0.80) 22.5%,hsla(0, 0%, 0%, 0.78) 29%,hsla(0, 0%, 0%, 0.73) 35.3%,hsla(0, 0%, 0%, 0.67) 41.2%,hsla(0, 0%, 0%, 0.60) 47.1%,hsla(0, 0%, 0%, 0.52) 52.9%,hsla(0, 0%, 0%, 0.44) 58.8%,hsla(0, 0%, 0%, 0.33) 64.7%,hsla(0, 0%, 0%, 0.22) 71%,hsla(0, 0%, 0%, 0.12) 77.5%,hsla(0, 0%, 0%, 0.05) 84.5%,hsla(0, 0%, 0%, 0.011) 91.9%,hsla(0, 0%, 0%, 0) 100%);;
  margin-top: calc(clamp(32px, 2.75vw + 23px, 76px) * -1);
  border-end-start-radius: 12px;
  border-end-end-radius: 12px;
}
.media {
  position: relative;
  grid-area: 1/1/-1 /-1;
  z-index: 1;
  overflow: hidden;
  border-radius: 12px;
}
.footer {
  grid-area: 4/2;
  display: flex;
  gap: 16px;
  justify-content: space-between;
  align-items: flex-start;
  flex-direction: column;
}
.link-or-button-pure {
  z-index: 5;
  display: none;
}
.link-or-button {
  min-height: 54px;
  z-index: 5;
  display: inline-block;
}
@media (forced-colors: active) {
  .root::after {
    background: rgba(0,0,0,0.7);
  }
}

@media(hover:hover) {
  .root:hover slot:not([name]) {
    transform: scale3d(1.05,1.05,1.05);
  }
}
"
`;

exports[`getComponentCss() should return correct css for aspectRatio: "9:16", size: "default", weight: "semi-bold", background: dark, align: bottom, isCompact: false and hasGradient: false 1`] = `
":host {
  display: block;
  hyphens: auto;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot {
  display: block;
}
slot:not([name]) {
  width: 100%;
  height: 100%;
  transition: transform var(--p-transition-duration, 0.4s) cubic-bezier(0.25,0.1,0.25,1);
}
slot[name="header"] {
  grid-area: 2/2;
  z-index: 3;
}
::slotted(:is(img,picture,video)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
}
::slotted(:is(img,video)) {
  object-fit: cover !important;
}
a {
  grid-area: 1/1/-1 /-1;
  z-index: 4;
  outline: 0;
}
p {
  font: normal normal 400 clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: inherit;
  z-index: 3;
  margin: 0;
  max-width: 34.375rem;
  font-size: clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem);
  font-weight: 600;
  color: #FBFCFF;
}
.root {
  aspect-ratio: 9/16;
  width: 100%;
  height: 100%;
  display: grid;
  grid-template: clamp(16px, 1.25vw + 12px, 36px) auto minmax(0px, 1fr) auto clamp(16px, 1.25vw + 12px, 36px)/clamp(16px, 1.25vw + 12px, 36px) minmax(0px, 1fr) clamp(16px, 1.25vw + 12px, 36px);
}
.media {
  position: relative;
  grid-area: 1/1/-1 /-1;
  z-index: 1;
  overflow: hidden;
  border-radius: 12px;
}
.footer {
  grid-area: 4/2;
  display: flex;
  gap: 16px;
  justify-content: space-between;
  align-items: flex-start;
  flex-direction: column;
}
.link-or-button-pure {
  z-index: 5;
  display: none;
}
.link-or-button {
  min-height: 54px;
  z-index: 5;
  display: inline-block;
}
@media(hover:hover) {
  .root:hover slot:not([name]) {
    transform: scale3d(1.05,1.05,1.05);
  }
}
"
`;

exports[`getComponentCss() should return correct css for aspectRatio: "16:9", size: "inherit", weight: "regular", background: light, align: top, isCompact: true and hasGradient: false 1`] = `
":host {
  display: block;
  hyphens: auto;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot {
  display: block;
}
slot:not([name]) {
  width: 100%;
  height: 100%;
  transition: transform var(--p-transition-duration, 0.4s) cubic-bezier(0.25,0.1,0.25,1);
}
slot[name="header"] {
  grid-area: 4/2;
  z-index: 3;
}
::slotted(:is(img,picture,video)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
}
::slotted(:is(img,video)) {
  object-fit: cover !important;
}
a {
  grid-area: 1/1/-1 /-1;
  z-index: 4;
  outline: 0;
}
p {
  font: normal normal 400 clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: inherit;
  z-index: 3;
  margin: 0;
  max-width: 34.375rem;
  font-size: inherit;
  font-weight: 400;
  color: #010205;
}
.root {
  aspect-ratio: 16/9;
  width: 100%;
  height: 100%;
  display: grid;
  grid-template: clamp(16px, 1.25vw + 12px, 36px) auto minmax(0px, 1fr) auto clamp(16px, 1.25vw + 12px, 36px)/clamp(16px, 1.25vw + 12px, 36px) minmax(0px, 1fr) clamp(16px, 1.25vw + 12px, 36px);
}
.media {
  position: relative;
  grid-area: 1/1/-1 /-1;
  z-index: 1;
  overflow: hidden;
  border-radius: 12px;
}
.footer {
  grid-area: 2/2;
  display: flex;
  gap: 16px;
  justify-content: space-between;
  align-items: center;
  flex-direction: row;
}
.link-or-button-pure {
  z-index: 5;
  display: inline-block;
}
.link-or-button {
  min-height: 54px;
  z-index: 5;
  display: none;
}
@media(hover:hover) {
  .root:hover slot:not([name]) {
    transform: scale3d(1.05,1.05,1.05);
  }
}
"
`;

exports[`getComponentCss() should return correct css for aspectRatio: {"base":"1:1","xs":"4:3","s":"3:4","m":"16:9","l":"9:16","xl":"1:1"}, size: {"base":"inherit","xs":"default","s":"inherit","m":"default","l":"inherit","xl":"default"}, weight: {"base":"semi-bold","xs":"regular","s":"semi-bold","m":"regular","l":"semi-bold","xl":"regular"}, background: light, align: top, isCompact: {"base":true,"xs":false,"s":true,"m":false,"l":true,"xl":false} and hasGradient: true 1`] = `
":host {
  display: block;
  hyphens: auto;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot {
  display: block;
}
slot:not([name]) {
  width: 100%;
  height: 100%;
  transition: transform var(--p-transition-duration, 0.4s) cubic-bezier(0.25,0.1,0.25,1);
}
slot[name="header"] {
  grid-area: 4/2;
  z-index: 3;
}
::slotted(:is(img,picture,video)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
}
::slotted(:is(img,video)) {
  object-fit: cover !important;
}
a {
  grid-area: 1/1/-1 /-1;
  z-index: 4;
  outline: 0;
}
p {
  font: normal normal 400 clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: inherit;
  z-index: 3;
  margin: 0;
  max-width: 34.375rem;
  font-size: inherit;
  font-weight: 600;
  color: #010205;
}
@media(min-width:480px) {
  p {
    font-size: clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem);
    font-weight: 400;
  }
}

@media(min-width:760px) {
  p {
    font-size: inherit;
    font-weight: 600;
  }
}

@media(min-width:1000px) {
  p {
    font-size: clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem);
    font-weight: 400;
  }
}

@media(min-width:1300px) {
  p {
    font-size: inherit;
    font-weight: 600;
  }
}

@media(min-width:1760px) {
  p {
    font-size: clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem);
    font-weight: 400;
  }
}

.root {
  aspect-ratio: 1/1;
  width: 100%;
  height: 100%;
  display: grid;
  grid-template: clamp(16px, 1.25vw + 12px, 36px) auto minmax(0px, 1fr) auto clamp(16px, 1.25vw + 12px, 36px)/clamp(16px, 1.25vw + 12px, 36px) minmax(0px, 1fr) clamp(16px, 1.25vw + 12px, 36px);
}
.media {
  position: relative;
  grid-area: 1/1/-1 /-1;
  z-index: 1;
  overflow: hidden;
  border-radius: 12px;
}
.footer {
  grid-area: 2/2;
  display: flex;
  gap: 16px;
  justify-content: space-between;
  align-items: center;
  flex-direction: row;
}
.link-or-button-pure {
  z-index: 5;
  display: inline-block;
}
.link-or-button {
  min-height: 54px;
  z-index: 5;
  display: none;
}
@media(min-width:480px) {
  .root {
    aspect-ratio: 4/3;
  }
  .footer {
    align-items: flex-start;
    flex-direction: column;
  }
  .link-or-button-pure {
    display: none;
  }
  .link-or-button {
    display: inline-block;
  }
}

@media(min-width:760px) {
  .root {
    aspect-ratio: 3/4;
  }
  .footer {
    align-items: center;
    flex-direction: row;
  }
  .link-or-button-pure {
    display: inline-block;
  }
  .link-or-button {
    display: none;
  }
}

@media(min-width:1000px) {
  .root {
    aspect-ratio: 16/9;
  }
  .footer {
    align-items: flex-start;
    flex-direction: column;
  }
  .link-or-button-pure {
    display: none;
  }
  .link-or-button {
    display: inline-block;
  }
}

@media(min-width:1300px) {
  .root {
    aspect-ratio: 9/16;
  }
  .footer {
    align-items: center;
    flex-direction: row;
  }
  .link-or-button-pure {
    display: inline-block;
  }
  .link-or-button {
    display: none;
  }
}

@media(min-width:1760px) {
  .root {
    aspect-ratio: 1/1;
  }
  .footer {
    align-items: flex-start;
    flex-direction: column;
  }
  .link-or-button-pure {
    display: none;
  }
  .link-or-button {
    display: inline-block;
  }
}

@media(hover:hover) {
  .root:hover slot:not([name]) {
    transform: scale3d(1.05,1.05,1.05);
  }
}
"
`;
